# screenshare

./: .dockerignore  Dockerfile  audio_handler.py  broadcaster.py  config.py  discovery.py  docker-compose.yml  gui_app.py  install.bat  network_utils.py  pyproject.toml  relay_server.py  requirements-linux.txt  requirements-server.txt  requirements-web.txt  requirements.txt  screen_handler.py  server_entrypoint.sh  viewer.py  web_viewer.py
static/: index.html
